# youtube-legend-cli

./: .cargoignore  .gitignore  CHANGELOG.md  CHANGELOG.pt-BR.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  LICENSE  LICENSE-APACHE  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  build.rs  ci.yml  clippy.toml  deny.toml  gaps.md  llms-full.pt-BR.txt  llms-full.txt  llms.pt-BR.txt  llms.txt  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  youtube-direct.yml
benches/: cache_bench.rs
docs/: AGENTS.md  AGENTS.pt-BR.md  ARCHITECTURE.md  COOKBOOK.md  COOKBOOK.pt-BR.md  CROSS_PLATFORM.md  CROSS_PLATFORM.pt-BR.md  HOW_TO_USE.md  HOW_TO_USE.pt-BR.md  MIGRATION.md  MIGRATION.pt-BR.md  TESTING.md  TESTING.pt-BR.md  agent-teams-workflow.md
docs/decisions/: 0009-cargo-toml-ownership-in-parallel-tasks.md  0010-deferred-doc-cfg-migration.md
docs/schemas/: README.md  caption-track.schema.json
examples/: batch.rs  json_output.rs  single_url.rs
skill/youtube-legend-cli-en/: SKILL.md
skill/youtube-legend-cli-pt/: SKILL.md
src/: cache.rs  cli.rs  crypto.rs  error.rs  io.rs  lib.rs  logging.rs  main.rs  retry.rs  secret_endpoints.rs  text.rs
src/cache/: mod.rs  operations_cache.rs  player_js_cache.rs
src/commands/: batch.rs  extract.rs  mod.rs
src/parse/: mod.rs  srv3.rs  video_id.rs
src/provider/: mod.rs  provider_a.rs  provider_b.rs  provider_headless.rs  provider_noteey.rs  provider_youtube_direct.rs  robots.rs  stealth.rs
src/provider/youtube/: caption_track.rs  decipher.rs  mod.rs  ncode.rs  player_js.rs  player_response.rs
tests/fixtures/: corpus.txt  corpus_no_subtitle.txt
tests/fixtures/player/: base_v123.js  ncode_v456.js
tests/fixtures/timedtext/: sample_en.srv3  sample_multiline.srv3  sample_pt.json3
tests/integration/: cli_probing.rs  corpus.rs  offline_cache.rs  provider_a_wiremock.rs  provider_b_wiremock.rs  provider_headless_wiremock.rs  provider_noteey_wiremock.rs  provider_youtube_direct_wiremock.rs  rss.rs  signal_handler_stress.rs
